--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,74 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Benvindo a aplicação <%= title %></p>
+
+    <div data-js="outErr" class="err"></div>
+
+    <fieldset>
+      <legend>Cadastro de pessoas</legend>
+
+      <form action="/cadastrar-pessoa" method="POST" data-js="form">
+
+        <div>
+          <label for="name">Nome:</label>  
+          <input type="text" data-js="name" name="name" id="name">
+        </div>
+
+        <div>
+          <label for="lastName">Sobrenome:</label>  
+          <input type="text" data-js="lastName" name="lastName" id="lastName">
+        </div>
+
+        <div>
+          <label for="cpf">CPF:</label>  
+          <input type="text" data-js="cpf" name="cpf" id="cpf">
+        </div>
+
+        <div>
+          <label for="phone">Telefone:</label>  
+          <input type="text" data-js="phone" name="phone" id="phone">
+        </div>
+
+        <div>
+          <label for="address">Endereço:</label>  
+          <input type="text" data-js="address" name="address" id="address">
+        </div>
+
+        <hr>
+
+        <div>
+          <input type="submit" value="Cadastrar">
+        </div>
+      </form>
+    </fieldset>
+
+    <fieldset>
+      <legend>Pessoas cadastradas</legend>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Sobrenome</th>
+            <th>CPF</th>
+            <th>Telefone</th>
+            <th>Endereço</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(var i = 0, length = person.length; i < length; i = i + 1) { %>
+            <tr>
+              <td><%= person[i].name %></td>
+              <td><%= person[i].lastName %></td>
+              <td><%= person[i].cpf %></td>
+              <td><%= person[i].phone %></td>
+              <td><%= person[i].address %></td>
+            </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </fieldset>
+
+    <script src="./javascripts/validate.js"></script>
   </body>
 </html>
